--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -318,6 +318,7 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
@@ -606,6 +607,7 @@ deny 2a0f:df00:0:255::206;
 deny 2a10:1fc0:1::c758:3168;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
+deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:a800:1:1:194:26:192:161;
 deny 2a12:a800:1:1:194:26:192:77;
