--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -102,6 +102,7 @@ deny 2001:67c:e28:1::3;
 deny 2001:67c:e28:1::4;
 deny 2001:910:1400:107::2;
 deny 2001:ac8:22:43::20e5:a7d7;
+deny 2001:b011:4006:b101::b;
 deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
@@ -123,6 +124,7 @@ deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
@@ -223,7 +225,6 @@ deny 2607:5300:205:200::4894;
 deny 2607:5300:60:566f::1;
 deny 2607:5300:61:785::;
 deny 2607:5300:61:785:1:2:3:4;
-deny 2607:5501:3000:1dc::2;
 deny 2607:f130:0:ed:216:3cff:febd:3b42;
 deny 2607:f530:8002::19;
 deny 2620:18c:0:192::171;
@@ -334,6 +335,7 @@ deny 2a05:541:122:49::1;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
 deny 2a05:b0c7:67c6::1;
+deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
 deny 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
@@ -368,6 +370,7 @@ deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a09:b280:fe01:61::a;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+deny 2a0b:64c0:11:0:be24:11ff:fe12:2ad2;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -558,8 +561,6 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
-deny 2a0d:8140:1fff:3f23::1;
-deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
